# python-mcp-demos

./: .dockerignore  .env-sample  AGENTS.md  README.md  azure.yaml  pyproject.toml
.github/workflows/: python.yaml
agents/: Dockerfile  agentframework_http.py  agentframework_learn.py  keycloak_auth.py  langchainv1_github.py  langchainv1_http.py  langchainv1_keycloak.py
infra/: Dockerfile.keycloak  aca-noauth.bicep  aca.bicep  agent.bicep  auth_init.py  http-routes.bicep  keycloak.bicep  main.bicep  main.parameters.json  server.bicep  write_env.ps1  write_env.sh
infra/core/ai/: cognitiveservices.bicep
infra/core/host/: container-app-upsert.bicep  container-app.bicep  container-apps-environment.bicep
infra/core/security/: registry-access.bicep
keycloak/: Dockerfile  realm.json
scripts/: keycloak_setup.sh
servers/: Dockerfile  Dockerfile.noauth  auth_entra_mcp.py  auth_keycloak_mcp.py  basic_mcp_http.py  basic_mcp_stdio.py  deployed_mcp.py  entrypoint.sh  expenses.csv  keycloak_deployed_mcp.py  opentelemetry_middleware.py
spanish/: README.md
